config layout including sidebar menu